✨ New Features: - Add comprehensive tournament system with 6 IPL teams, group stages, and finals - Implement Net Run Rate (NRR) calculations for tie-breaking - Add interactive Points Table and Fixtures displays with real-time updates - Create tournament progression logic with automatic AI match simulation - Add tournament elimination detection and proper user feedback
🐛 Bug Fixes:
- Fix match result recording bug where winner/loser assignments were incorrect
- Resolve tournament progression halting after failed chases
- Fix Points Table and Fixtures buttons not working due to scope issues
- Correct game state reset issues between tournament matches
- Fix start game button overlapping with team lineups
- Resolve "Back to Menu" button not working when eliminated from tournament

🎨 UI/UX Improvements:
- Add tournament overlay system with proper cleanup
- Implement user team highlighting in standings
- Add match status indicators (completed/pending) in fixtures
- Enhance tournament result screens with next match information
- Improve tournament button styling and responsiveness

⚙️ Technical Improvements:
- Create TournamentManager class with modular tournament logic
- Add global game instance for tournament function accessibility
- Implement proper tournament state management and cleanup
- Add comprehensive error handling for tournament operations
- Simplify winner/loser assignment logic to prevent errors

📝 Documentation:
- Update README.md with tournament features and recent bug fixes
- Document all new functionality and technical improvements

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
 
     <!-- Scripts -->
     <script src="js/teams.js"></script>
+    <script src="js/tournament.js"></script>
     <script src="js/components/stadium.js"></script>
     <script src="js/components/ball.js"></script>
     <script src="js/components/character.js"></script>
