Improved graphics - added night gameplay

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <div class="ui-overlay">
             <!-- Scoreboard -->
             <div id="scoreboard">
+                <div id="matchConditions" class="match-condition">Day Match at Lord's</div>
                 <div class="score-item">SCORE: <span id="score">0</span></div>
                 <div class="score-item">OVERS: <span id="overs">0.0</span></div>
                 <div class="score-item">WICKETS: <span id="wickets">0</span></div>
