Gamplay Tuning physics

--- a/index.html
+++ b/index.html
@@ -152,6 +152,7 @@
     </div>
 
     <!-- Scripts -->
+    <script src="js/config.js"></script>
     <script src="js/teams.js"></script>
     <script src="js/tournament.js"></script>
     <script src="js/components/stadium.js"></script>
