Bug fixes and UI Enhancements

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
                 <div class="score-item">4s: <span id="fours">0</span></div>
                 <div class="score-item">6s: <span id="sixes">0</span></div>
                 <div class="score-item">S/R: <span id="strikeRate">0.00</span></div>
+                <div class="score-item">REQ RR: <span id="reqRunRate">—</span></div>
                 <div id="bowlerInfo">Bowler: <span id="bowlerName">-</span> (<span id="bowlerTeam"
                         class="bowler-team">-</span>)</div>
             </div>
@@ -34,6 +35,9 @@
                 <div class="over-balls" id="overBalls"></div>
             </div>
             <button id="scorecardBtn" style="display:none; right:15px; top:120px;">Scorecard</button>
+            <div id="timingMeter" class="timing-meter" style="display: none;">
+                <div id="timingMeterFill" class="timing-meter-fill"></div>
+            </div>
             <div id="feedbackText"></div>
             <!-- Game menu -->
             <div id="gameMenu">
