Minor UI changes

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
                 <div class="score-item">6s: <span id="sixes">0</span></div>
                 <div class="score-item">S/R: <span id="strikeRate">0.00</span></div>
                 <div class="score-item">REQ RR: <span id="reqRunRate">—</span></div>
-                <div id="bowlerInfo">Bowler: <span id="bowlerName">-</span> (<span id="bowlerTeam"
-                        class="bowler-team">-</span>)</div>
+                <div id="bowlerInfo">Bowler: <span id="bowlerName">-</span></div>
             </div>
             <!-- Current over tracker -->
             <div id="overTracker">
