--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
                 <div class="score-item">S/R: <span id="strikeRate">0.00</span></div>
                 <div class="score-item">REQ RR: <span id="reqRunRate">—</span></div>
                 <div id="bowlerInfo">Bowler: <span id="bowlerName">-</span></div>
+                <div id="batsmenInfo">
+                    <div class="batsman-item">
+                        <span class="batsman-label"></span>
+                        <span class="batsman-score"></span>
+                    </div>
+                    <div class="batsman-item">
+                        <span class="batsman-label"></span>
+                        <span class="batsman-score"></span>
+                    </div>
+                </div>
             </div>
             <!-- Current over tracker -->
             <div id="overTracker">
