--- a/index.html
+++ b/index.html
@@ -27,23 +27,16 @@
                 <div class="score-item">S/R: <span id="strikeRate">0.00</span></div>
                 <div class="score-item">REQ RR: <span id="reqRunRate">—</span></div>
                 <div id="bowlerInfo">Bowler: <span id="bowlerName">-</span></div>
-                <div id="batsmenInfo">
-                    <div class="batsman-item">
-                        <span class="batsman-label"></span>
-                        <span class="batsman-score"></span>
-                    </div>
-                    <div class="batsman-item">
-                        <span class="batsman-label"></span>
-                        <span class="batsman-score"></span>
-                    </div>
-                </div>
             </div>
             <!-- Current over tracker -->
             <div id="overTracker">
                 <h4>CURRENT OVER</h4>
                 <div class="over-balls" id="overBalls"></div>
             </div>
-            <button id="scorecardBtn" style="display:none; right:15px; top:120px;">Scorecard</button>
+            <div id="currentBatsmen">
+                <div id="batsmenList"></div>
+            </div>
+            <button id="scorecardBtn" style="display:none; right:15px; top:160px;">Scorecard</button>
             <div id="timingMeter" class="timing-meter" style="display: none;">
                 <div id="timingMeterFill" class="timing-meter-fill"></div>
             </div>
